--- a/Gummi/Gummi/Gummi.csproj
+++ b/Gummi/Gummi/Gummi.csproj
@@ -6,17 +6,31 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
+    <Folder Include="Models\" />
+    <Folder Include="Controllers\" />
+    <Folder Include="Views\" />
+    <Folder Include="Views\Products\" />
+    <Folder Include="Views\GummiUsers\" />
+    <Folder Include="Views\Home\" />
+    <Folder Include="Views\Shared\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="1.1.2" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="1.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="1.1.2" />
   </ItemGroup>
-
+    
+  <ItemGroup>
+         <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="1.1.2" />
+  </ItemGroup>
+    
   <ItemGroup>
     <None Remove="gummi.config" />
     <None Remove="appsettings.json" />
     <None Remove="app.config" />
   </ItemGroup>
 </Project>
+
+
